--- a/webTest/.settings/org.eclipse.wst.common.component
+++ b/webTest/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
                 
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/res"/>
                 
         <property name="java-output-path" value="/webTest/build/classes"/>
         <property name="context-root" value="/"/>
